--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   gap: ^3.0.1
   flutter_svg: ^2.2.1
+  get: ^4.6.6
+
 
 dev_dependencies:
   flutter_test:
