--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,8 +17,10 @@ dependencies:
   flutter_svg: ^2.2.1
   get: ^4.6.6
   flutter_screenutil: ^5.9.0
-
-
+  crystal_navigation_bar: ^1.0.4
+  persistent_bottom_nav_bar: ^6.2.1
+  pie_chart: ^5.4.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
