--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   pie_chart: ^5.4.0
   shared_preferences: ^2.2.2
   flutter_chat_bubble: ^2.0.0
+  intl: ^0.20.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
